# CellPainting-SNNL

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  2.2-AE-Train-SNNL.ipynb  2.21-AE-Train-SNNL-Copy1.ipynb  2.23-AE_TrainingPlots.ipynb  2.4-AE_CreateEmbedding.ipynb  AE-MAIN-Baseline.ipynb  AE-MAIN-SNNL-Copy1.ipynb  AE-MAIN-SNNL.ipynb  AE-TSNE-Baseline.ipynb  AE-TSNE-SNNL.ipynb  AE-Train-Baseline.ipynb  AE-Train-SNNL-Copy.ipynb  AE-Train-SNNL-Main.ipynb  AE_CreateEmbedding.ipynb  AE_Encoding.ipynb  AE_PLOTS.ipynb  AE_SNNL-Copy1.ipynb  AE_SNNL-Copy2.ipynb  AE_TrainingPlots.ipynb  AE_baseline-050.ipynb  AE_baseline-150.ipynb  AE_baseline-250.ipynb  AE_baseline-MAIN.ipynb  AE_baseline.py  AE_batch.py  AE_tsne.ipynb  Autoencoder_dev.ipynb  CHANGELOG.md  DNN_dev.ipynb  EncodeProfiles.ipynb  LICENSE  PCA_TSNE.ipynb  README.md  Untitled.ipynb  dev_autoencoder.py  dev_base.py  dev_code.py  (+42 more)
examples/: autoencoding.py  cnn_cifar10.py  cnn_classifier.py  dnn_classifier.py  dnn_hyperparameters.json  moe_classifier.py  resnet18_classifier.py  resnet34_classifier.py
hyperparameters/: AE_Base.yaml  AE_Base_All.yaml  ae_baseline_025_512_cpb.yaml  ae_baseline_050_512_cpb.yaml  ae_baseline_100_512_cpb.yaml  ae_baseline_150_512_cpb.yaml  ae_baseline_200_512_cpb.yaml  ae_baseline_250_256_cpb.yaml  ae_baseline_250_512_cpb.yaml  ae_cp_025_128.yaml  ae_cp_025_128_cpb.yaml  ae_cp_025_512.yaml  ae_cp_025_512_cpb.yaml  ae_cp_050_128.yaml  ae_cp_050_128_cpb.yaml  ae_cp_050_512.yaml  ae_cp_050_512_256.yaml  ae_cp_050_512_cpb.yaml  ae_cp_050_512_cpb160.yaml  ae_cp_050_512_sig.yaml  (+56 more)
(+79 files in other folders)
